# adventOfCode

./: .gitignore  2023.cpp  2023.h  AVC.kdev4  CMakeLists.txt  README.md  build.sh  main.cpp  main.h  util.cpp  util.h
2023/: day1.h  day2.cpp  day2.h  day3.cpp  day4.cpp  day6.cpp  day6.h
2024/: day1.cpp  day1.hpp  day2.cpp  day2.hpp
2025/: day1.cpp  day1.hpp
bash/: compile.sh
old/: 2015.cpp  2015.h
old/2023/: day1.cpp  day2.cpp  day3.cpp  day3.h  day4.h
